fix(styles): error image horizontal overflowing on mobile devices

--- a/src/s2-homeworks/hw05/pages/Error404.module.css
+++ b/src/s2-homeworks/hw05/pages/Error404.module.css
@@ -1,11 +1,15 @@
-.error404 {
-  width: 451px;
-  height: 100%;
-}
-
 .wrapper {
+  composes: container from '../../../common/Common.module.css';
   align-items: center;
   display: flex;
+  /*noinspection CssOverwrittenProperties*/
   height: calc(100vh - var(--header-height));
+  /* noinspection CssOverwrittenProperties*/
+  height: calc(100dvh - var(--header-height));
   justify-content: center;
+}
+
+.error404 {
+  width: 450px;
+  max-width: 85%;
 }
