--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   inset: 0 auto 0 0;
   padding: 16px 24px;
-  width: min(320px, 85%);
+  width: min(320px, 75%);
   background-color: var(--white);
   box-shadow: var(--box-shadow-4), var(--box-shadow-5);
   overflow: auto;
